--- a/site/index.html
+++ b/site/index.html
@@ -119,12 +119,8 @@
 <ul>
 <li>Linux-сервер (предпочтительно Debian или Ubuntu)</li>
 <li>Nginx &gt;=1.6</li>
-<li>
-<p>Python &gt;=3.4</p>
-</li>
-<li>
-<p>Imagemagick</p>
-</li>
+<li>Python &gt;=3.4</li>
+<li>Imagemagick</li>
 </ul>
 <h2 id="nginx">Nginx</h2>
 <p>Конфигурация хоста должна выглядеть так:</p>
