--- a/site/index.html
+++ b/site/index.html
@@ -123,6 +123,9 @@
 <li>Imagemagick</li>
 <li>Librsvg</li>
 </ul>
+<p>Оптимизаторы изображений:
+<em> jpegtran
+</em> optipng</p>
 <h2 id="nginx">Nginx</h2>
 <p>Конфигурация хоста должна выглядеть так:</p>
 <pre class="prettyprint well"><code>server {
